# Nuze-AI

./: .dockerignore  .gitignore  Categories.md  Dockerfile  README.md  crontab  docker-compose.dev.yml  docker-compose.yml  enable_vector.py  init.sql  init_ollama.sh  main.py  news-cls-modfile  news-combiner-modfile  pyproject.toml  requirements.txt  reset_db.py  run-dev.sh  run-prod.sh  schema.er  scraper_output.txt  test_auth.py
app/: config.py  database.py  main.py
app/models/: article.py  interaction.py  summary.py  synthesized_article.py  user.py
app/routers/: auth.py  feed.py  feedback.py  ingestion.py  interactions.py  summary.py  users.py
app/schemas/: article.py  preferences.py  user.py
app/services/: auth_service.py  content_service.py  feed_service.py  feedback_service.py  ingestion_service.py  llm_validator.py  nlp_service.py  scheduler.py  summary_service.py  user_service.py
app/utils/: security.py
docs/: README.md  architecture_diagram.md  architecture_diagram.mermaid  components.md  data_flow.md  data_flow.mermaid  erd.md  erd.mermaid  learning_algorithm.md  system_architecture.md  systemd-services.md  test_coverage.md  test_plan.md
docs/class_diagrams/: class_diagram.md  class_diagram_api_layer.md  class_diagram_business_layer.md  class_diagram_data_layer.md  class_diagram_external_layer.md
experiments/: UserVectorInterest.py  adjust.py  article.py  articles.json  articles_normalized.json  articles_normalized_new.json  evaluation_report.md  evaluation_report.py  ollama_test.py  test.py  users.json  utils.py
frontEnd/: package-lock.json  package.json
frontEnd/src/: App.css  App.jsx  api.js  index.css
frontend/: Dockerfile  Dockerfile.dev  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  AppModern.css  api.js
scrapers/: base_scraper.py  bbc_scraper.py  cnn_rss_feeds.py  cnn_scraper.py  foxnews_scraper.py  new_bbc_scraper.py  new_cnn_scraper.py  new_foxnews_scraper.py  new_nytimes_scraper.py  new_sky_news_scraper.py  nytimes_scraper.py  sky_news_rss_feed.py
scripts/: alter_interaction_schema.py  backfill_category_scores.py  backfill_images.py  daily_cluster.py  daily_ingest.py  test_daily_summary.py
test/: cluster.py  ollama.test.py  ollama_test.py
tests/: conftest.py  test_auth.py  test_feed_summary.py  test_metadata_integration.py  test_preferences_api.py  test_users.py
(+37 files in other folders)
