[project]
name = "nuze-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.18",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "astroid==3.3.9",
    "apscheduler>=3.10.0",
    "asyncpg>=0.31.0",
    "attrs==25.3.0",
    "beautifulsoup4==4.13.4",
    "certifi==2025.4.26",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "cssselect==1.3.0",
    "dill==0.4.0",
    "email-validator>=2.3.0",
    "fastapi==0.115.12",
    "feedfinder2==0.0.4",
    "feedparser==6.0.11",
    "filelock==3.18.0",
    "frozenlist==1.6.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "isort==6.0.1",
    "jieba3k==0.35.1",
    "joblib==1.4.2",
    "lxml==5.4.0",
    "lxml-html-clean==0.4.2",
    "mccabe==0.7.0",
    "multidict==6.4.3",
    "newspaper3k==0.2.8",
    "nltk==3.9.1",
    "ollama==0.4.8",
    "outcome==1.3.0.post0",
    "passlib[bcrypt]>=1.7.4",
    "pgvector>=0.4.1",
    "pillow==11.2.1",
    "platformdirs==4.3.7",
    "propcache==0.3.1",
    "pycparser==2.22",
    "pydantic==2.11.4",
    "pydantic-core==2.33.2",
    "pylint==3.3.6",
    "pysocks==1.7.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "pyyaml==6.0.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "requests-file==2.1.0",
    "scikit-learn>=1.7.2",
    "selenium==4.32.0",
    "sgmllib3k==1.0.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "soupsieve==2.7",
    "sqlalchemy>=2.0.44",
    "starlette==0.46.2",
    "tinysegmenter==0.3",
    "tldextract==5.3.0",
    "tomlkit==0.13.2",
    "tqdm==4.67.1",
    "trio==0.30.0",
    "trio-websocket==0.12.2",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.0",
    "urllib3==2.4.0",
    "uvicorn==0.34.2",
    "websocket-client==1.8.0",
    "wsproto==1.2.0",
    "yarl==1.20.0",
    "rich>=14.2.0",
    "pandas>=2.3.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
